--- a/views/default_page.erb
+++ b/views/default_page.erb
@@ -1,6 +1,6 @@
 <div id="container">
-  <a href="https://mlh.io" target="_blank" class="mlh" alt="Major League Hacking" title="Major League Hacking"></a>
+  <a href="http://hackthemidlands.com" target="_blank" class="mlh" alt="Hack The Midlands" title="Hack The Midlands"></a>
 
   <h1>Welcome</h1>
-  <p>To use, visit <strong>http://no-light.mlh.io/[enter hackathon name]</strong></p>
+  <p>To use, visit <strong>http://no-light.hackthemidlands.com/[enter hackathon name]</strong></p>
 </div>
