--- a/views/editor.erb
+++ b/views/editor.erb
@@ -7,8 +7,7 @@
       <button type="submit" id="submit">!light</button> <!-- Submit button -->
 
       <div id="sponsors">
-          <img src="/img/mlh/mlh-white.png" alt="Major League Hacking" title="Major League Hacking">
-          <div class="custom-branding"></div>
+          <img src="/img/logos/htmlogo.png" alt="Hack The Midlands" title="Hack The Midlands">
       </div>
   </header>
 
