--- a/views/error.erb
+++ b/views/error.erb
@@ -1,5 +1,5 @@
 <div id="container">
-  <a href="https://mlh.io" target="_blank" class="mlh"></a>
+  <a href="http://hackthemidlands.com" target="_blank" class="mlh"></a>
   <h1 class="error">Sorry - Already Submitted</h1>
   <p>You have already submitted this code under the name <%= @submission.name %>.</p>
 </div>
