--- a/views/submitted.erb
+++ b/views/submitted.erb
@@ -1,5 +1,5 @@
 <div id="container">
-  <a href="https://mlh.io" target="_blank" class="mlh"></a>
+  <img src="/img/logos/logo-full.png" />
 
   <h1>Submission received - <%= @submission.name %></h1><br>
   <span id="code">
